tests/ui/async-await/no-move-across-await-tuple.stderr
error[E0382]: use of moved value: `x.1`
  --> $DIR/no-move-across-await-tuple.rs:8:5
   |
LL |     drop(x.1);
   |          --- value moved here
LL |     nothing().await;
LL |     x.1
   |     ^^^ value used here after move
   |
   = note: move occurs because `x.1` has type `Vec<usize>`, which does not implement the `Copy` trait

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0382`.
